--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,12 @@ token:
 
 mail:
   smtp:
-    host: localhost
+    host: smtp.gmail.com
+    port: 465
+    username: bezook12@gmail.com
+    password: hasgyjkjzabkherb
   send:
-    to: test@email.com
     from: test@email.com
-
 security:
   permit-all: /login,/logout,/api/user/account/register,/api/user/account/activate/*, /api/user/account/password/reset/*
 server:
