Add distribution management to pom xmls

--- a/pom.xml
+++ b/pom.xml
@@ -70,4 +70,15 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>artifact-registry</id>
+            <url>https://europe-central2-maven.pkg.dev/hallowed-span-378416/cm-client</url>
+        </snapshotRepository>
+        <repository>
+            <id>artifact-registry</id>
+            <url>https://europe-central2-maven.pkg.dev/hallowed-span-378416/cm-client</url>
+        </repository>
+    </distributionManagement>
+
 </project>
