Update gcp ip-type required PUBLIC

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,6 +4,7 @@ spring:
       sql:
         database-name: cm
         instance-connection-name: hallowed-span-378416:europe-west1:cm
+        ip-types: PUBLIC
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql::///cm
